--- a/references.bib
+++ b/references.bib
@@ -568,6 +568,14 @@
 	journal =	"Harvard Business Review",
 	pages =		"71-80"
 }
+@article{Kaplan2007,
+	author = 	"Robert S. Kaplan and David P. Norton",
+	title =		"Using the Balanced Scorecard as a Strategic Management System",
+	year =		"2007",
+    month =     "7",
+	journal =	"Harvard Business Review",
+	url = {http://goo.gl/4v871V }
+}
 @book{Klubeck2011,
     author = {Klubeck, Martin},
     title = {Metrics: How to Improve Key Business Results},
