mostly done with chapter 3

--- a/paper_30_measure.tex
+++ b/paper_30_measure.tex
@@ -287,84 +287,88 @@
             \end{longtable}
     
     \subsection{BALANCED SCORECARD}
+    \label{sec:bsc}
     
-        A common technique for organizations to measure themselves is a 
-        balanced scorecard, first presented by Kaplan and 
-        Norton \cite{kaplan1992}.  
+        Developed in 1992 by Robert S. Kaplan and David P. Norton, the 
+        \textit{balanced scorecard}  is a set of measures that
+        give management a quick and comprehensive view of the
+        organization \cite{kaplan1992}.  Originally created as an
+        extension to the already existing financial measures, the
+        balanced scorecard expanded the measures to include: 
+        customer focus, internal process, and learning/growth. 
+        This gave organizations a more comprehensive view that was
+        not strictly financial.  It allows an organization to focus
+        on long-term strategic goals instead of just short-term goals.
+        As a result of the strategic focus, the balance scorecard
+        rapidly gained widespread adoption
+        among businesses \cite{Kaplan2007}.  
         
-        Kaplan and Norton originally identified 4 characteristics
-        for the balanced scorecard, but 
-        A \textit{balanced scorecard} should contain the following six
-        characteristics with the final 2 being optional 
-        as they were presented later by Parmenter \cite{parmenter2010}
-        and are not considered as part of the original balanced
-        scorecard outlined by Kaplan and Norton \cite{kaplan1992,Kaplan2007}.
+        In 2010, David Parmenter \cite{parmenter2010} added 2 more
+        characteristics to the balanced scorecard: employee satisfaction
+        and environment/community.  This results in a total of 6 
+        characteristics for the balanced scorecard.
         \begin{enumerate}
           \item Financial 
           \item Customer Focus
           \item Internal Process
           \item Learning and Growth
-          \item Employee Satisfaction
-          \item Environment/Community
+          \item Employee Satisfaction\footnote{\label{ft:bsc} These 2 
+                characteristics are not a part of the original balanced 
+                scorecard presented by Kaplan and Norton in 1992.  
+                They  were added later by Parmenter \cite{parmenter2010}. }
+          \item Environment/Community\textsuperscript{\ref{ft:bsc}}
         \end{enumerate}
         
-        Balanced scorecards are great for displaying the important information about
-        an organization.  However, a balanced scorecard does not specify what
-        exactly needs to be tracked.  It is also not specific to an SDO and 
-        it does not produce a single number.
-        
-        This info comes from .
+        Balanced scorecards are great for easily displaying the 
+        important information about
+        an organization.  The downside is a balanced scorecard does not specify what
+        exactly needs to be tracked. It can be very difficult to determine exactly
+        what PIs, RIs, KRIs and/or KPIs to track in a balanced scorecard. 
+        It just specifies 6 broad categories.
+        It is also not specific to an SDO and 
+        it does not produce a single number.  However, any new measurement
+        technique for an organization should be compared with the balanced
+        scorecard.  
 
     \subsection{PROJECT MANAGEMENT MEASUREMENT}
-        According to Putnam and Myers in \cite{Putnam2013}, the 5 core measurements for managing software
+    \label{sec:pm}
+        A final strategy to measure an SDO is focused on the aspect of
+        project management. Project management is the guidance
+        applied to a project to ensure an effective and efficient
+        completion.  Proper project management will ensure all steps
+        of the SDLC
+        continue to progress and all obstacles are handled
+        in a timely fashion.  
+        According to Putnam and Myers in \cite{Putnam2013}, 
+        the 5 core measurements for managing software
         projects are:
         
         \begin{enumerate}
-            \item \textbf{Quantity of function} usually measured in terms of size (such as source lines of code or function points), that ultimately execute on the computer
+            \item \textbf{Quantity of function} usually measured in terms of size (such as source lines of code), that ultimately execute on the computer
             \item \textbf{Productivity} as expressed in terms of the functionality produced for the time and effort expended
             \item \textbf{Time} the duration of the project in calendar months
             \item \textbf{Effort} the amount of work expended in person-months
             \item \textbf{Reliability} as expressed in terms of defect rate (or its reciprocal, mean time to defect)
         \end{enumerate}
-        However, these measurements don't focus on the entire SDO. They say nothing about the availablity of the software infrastructure or the satisfaction of the users.
         
-        \begin{description}
-          \item[Time] This measurement can be hours, days, weeks, or months.  the time increment does not matter as long as it is consistent.
-          \item[Effort] This measurement is person-months, person-weeks, or person-days.
-          \item[Quality] This measurement is the defect rate (defects per time period).
-          \item[Amount of Work] This measurement has the same units as Effort above. 
-          \item[Process Productivity] look into this a bit further
-          \item[Function Points] find a definition and a comparison with story points
-          \item[Story Points] Look in some agile book
-        \end{description}
+        A \textit{process productivity} number is calculated based entirely
+        off aspects of the SDLC and the 5 core measurements.  It is a number
+        targeted at project teams working on the SDLC.  
+       
         
-        Chapter 7 of \cite{Putnam2013} contains some equations to calculate and relate
-        these measures. Those equations will be studied and evaluated.
 
-
-    \subsection{MEASURING OTHER ASPECTS OF AN SDO}
+    \subsection{A SIMPLER MEASUREMENT}
     
-        It is important to note that software departments do not just
-        develop software.  The department has many other duties
+        It is important to note that SDOs do not just
+        develop software.  An SDO has many other duties
         including: deploying software, installing server hardware/software,
         writing documentation, surveying users, research, innovation,
-        education and other common business duties.
-    
-    \subsection{COMBINING THE MEASURES}
+        education and other common business duties.  Thus it is
+        important to measure as many duties as possible.  
     
         How can the PIs, RIs, KRIs, and KPIs be combined to form a single
-        value called an MPI (Master Performance Indicator)?  The field
-        of sports analytics also has numerous techniques for combining
-        multiple indicators to produce a single number \cite{Cervone2014}.
+        value called an MPI (Master Performance Indicator)?  
 
 
-
-
-
-
-
-making decisions based upon historical data.  
-
-Data Driven Software Engineering not Data Driven Software Development
 
 \end{document}
