--- a/paper_40_mpi.tex
+++ b/paper_40_mpi.tex
@@ -770,6 +770,10 @@
             The requirements of a software development organization are important.
             
             
+            \begin{description}
+              \item[Function Points] find a definition and a comparison with story points
+              \item[Story Points] Look in some agile book
+            \end{description}
             
             \paragraph{REQUIREMENTS DATA}
             
@@ -898,7 +902,6 @@
             analytics when applied to software development organizations.
         
             \begin{longtable}{p{4cm}p{10cm}}
-                % pairs: absolute number (percentage)
                 
                 \toprule%
                  \centering%
@@ -928,4 +931,68 @@
                 \label{tab:questions}
             \end{longtable}
 
+        
+        \subsubsection{MPI VS. BALANCED SCORECARD}
+            Section \ref{sec:bsc} discusses the characteristics of the 
+            balanced scorecard.  Table \ref{tab:bsc} presents a
+            comparison of the characteristics of a balanced scorecard
+            versus MPI.
+            As the newer 2 characteristics of a balanced scorecard
+            have only existed since 2010 and the adoption is limited,
+            the comparison will only be against the original 4 balanced
+            scorecard characteristics.
+            
+             \begin{longtable}{p{3cm}p{1cm}p{10cm}}
+                % pairs: absolute number (percentage)
+                
+                \toprule%
+                 \centering%
+                 {\bfseries Balanced Scorecard}
+                 & {\bfseries MPI?} 
+                 & {\bfseries Explanation} \\
+                
+                \cmidrule[0.4pt](r{0.125em}){1-1}%
+                \cmidrule[0.4pt](lr{0.125em}){2-2}%
+                \cmidrule[0.4pt](lr{0.125em}){3-3}%
+                % \midrule
+                \endhead
+                
+                Financial & No & MPI does not address financial as it is best suited 
+                    for an organization that treats software development as a fixed,
+                    budgeted expense. If the budget is fixed, MPI provides a number
+                    to indicate the amount of value for that fixed budget.  \\
+                \myrowcolour%
+                Customer Focus & Yes & MPI includes a customer survey which is 
+                    completely customer focused.\\
+                Internal Process & Yes & MPI is highly focused on internal processes.
+                    The MPI elements of schedule and requirement are completely
+                    focused on how reality meets the expected process. MPI is
+                    negatively impacted when internal processes are followed. \\
+                \myrowcolour%
+                Learning/Growth & No & MPI does not address this characteristic. \\
+                
+                \bottomrule
+                
+                \caption{BALANCED SCORECARD VERSUS MPI}
+                \label{tab:bsc}
+            \end{longtable}
+
+        
+        \subsubsection{MPI VS. PROJECT MANAGEMENT MEASUREMENT}
+            Previously in Section \ref{sec:pm}, the project management
+            measurement was presented.   Its greatest limitation is the lack of
+            focus on the entire SDO.  Project management measurement says 
+            nothing about the availability of the software infrastructure
+            or the satisfaction of the users.  It is not near as comprehensive
+            as either the balanced scorecard or MPI. Actually, MPI incorporates
+            the 5 core measurements from project management.
+            Plus, the process productivity
+            number is less suitable for upper management and more
+            suitable for project teams.  Although it does provide a single
+            process productivity number, it is does not have the same focus
+            as MPI.
+            
+            
+            
+            
 \end{document}
