--- a/paper_50_sdlc-ae.tex
+++ b/paper_50_sdlc-ae.tex
@@ -75,6 +75,11 @@ will be much easier to create and gamification will be much more easily attainab
     This section will provide R scripts to calculate each individual score and the overall 
     MPI score. The scripts will need to be run every time the data is updated and the MPI
     score needs to be recalculated.
+    
+    
+
+making decisions based upon historical data. 
+Data Driven Software Engineering not Data Driven Software Development
 
 
 \end{document}
