--- a/paper_80_conclusion.tex
+++ b/paper_80_conclusion.tex
@@ -11,6 +11,19 @@ predetermined set of questions.  It would even be advantageous to build a softwa
 handle the survey distribution and collection.  Ideally, the results would automatically be
 inserted into the appropriate database tables for MPI scoring. 
 
+As shown in Table \ref{tab:bsc}, MPI is currently not addressing 2 characteristics of the balanced scorecard.  If the SDO does not operate on a fixed budget, MPI could be 
+expanded to include another element for financial data. The challenge arises when
+determining how to relate the SDO performance to finances.  The most likely scenario
+would be a method to either select or predicted the expected software sales
+for a month.  Then every month create an MPI element score that reflects
+how much the expected sales were exceeded or missed.  The other missing
+balanced scorecard characteristic is learning and growth.  Those are very difficult
+to quantitatively measure.  In this case some possible data points might be:
+hours of training, number of training courses, number of employees receiving
+training, number of promotions, or another measure centered around training
+courses and career growth.  Again, once data exists, the problem becomes finding
+a baseline and measuring with respect to that baseline.
+
 % new section
 \section{CONCLUSION}
 
