--- a/paper_30_measure.tex
+++ b/paper_30_measure.tex
@@ -367,8 +367,14 @@
         important to measure as many duties as possible.  
     
         How can the PIs, RIs, KRIs, and KPIs be combined to form a single
-        value called an MPI (Master Performance Indicator)?  
-
-
-
+        value called an MPI (Master Performance Indicator)?  If the indicators
+        are targeted for upper management to understand performance, then 
+        KPIs are not the correct indicators.  KPIs are targeted towards
+        immediate action and future performance.  RIs and KRIs are the most
+        beneficial for upper management to gauge how an organization is doing.
+        However, with so many possible RIs and even KRIs, it can be tricky
+        to gain a quick understanding.  The next section will present
+        and explain a technique to combine KRIs into a single number
+        for immediate and  effortless evaluation of an SDO.
+        
 \end{document}
