--- a/paper_70_case-study.tex
+++ b/paper_70_case-study.tex
@@ -6,10 +6,27 @@
 
 Data has been collected from the software development processes of
 an SDO within a large financial institution.
-The data collection was from 2008 to present. This section will provide the analysis performed and the MPI scores of that data. The data is incomplete but that is realistic of most oganizations.  Currently, the data
-consists of availability, quality, and schedule.  Satisfaction and Requirements are being obtained. An example of the initial analysis is included in \cref{app:case}.
+The data collection was from 2007 to January 2015. As would be expected
+in any organization, not all 5 elements have data for the entire duration.
+MPI can still work because the calculations will only include
+the available elements.  This section will provide the analysis performed and the MPI scores of that data.  An example of the initial analysis is included in \cref{app:case}.
 
 \subsection{WITH HISTORICAL DATA}
+    This first case will demonstrate how to calculate the MPI for an
+    organization when historical data is present.  
+    \subsubsection{QUALITY}
+        Luckily, the data for quality goes from October 2007 to January 2015
+        and contains 985 observations.
+        This is important because historical data can be used to create the
+        baseline quality function.  All quality for the years 2007 through 2013
+        will be used as historical data for the purposes of creating
+        the baseline quality function.  
+    \subsubsection{AVAILABILITY}
+    \subsubsection{SATISFACTION}
+    \subsubsection{SCHEDULE}
+    \subsubsection{REQUIREMENTS}
+    \subsubsection{OVERALL}
+        All of the months do not include the same elements.  
 
 An MPI calculation analyzing historical performance.
 
